# fastapi-introduce

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Makefile  README.md  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml
app/: config.py  db.py  main.py
app/models/: user.py
app/serializers/: __init__.py  user_serializers.py
app/views/: user_views.py
migrations/: env.py
migrations/versions/: f9019c97afdc_0001_add_the_users_table.py
